--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.5.3",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
