--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.5.3",
+    "react-to-print": "^3.1.0",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
