--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.5.3",
+    "react-select": "^5.10.1",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
